--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
 	padding: 0;
 	box-sizing: border-box;
     outline: none;
+    font-family: monospace;
 }
 
 body{
@@ -13,8 +14,17 @@ body{
 	cursor: grab;
 }
 
-.webgl{
+.webgl, 
+#loader{
     position: fixed;
     top: 0;
     left: 0;
+}
+
+#loader{
+    display: grid;
+    place-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #FAEDCD;
 }
